@@ -1,4 +1,4 @@
-rev 13-Sep_12-10_05
+rev 13-Sep_12-14_24
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -273,3 +273,5 @@ New lang string-- 'complex_tables'-- for editing window
 Corrected fckconfig.js to use editor/lang/<iso.js> files for geshi and keyboard plugins.
 
 Updated language strings for Geshi plugin.
+
+Updated language strings and code for Scayt
